[package]
name = "poglo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = { path = "../glow" }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.28", optional = true }
sdl2 = { version = "0.35", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window" ] }
wasm-bindgen = { version = "0.2" }
